[project]
name = "listloc"
version = "0.1.4"
description = ""
authors = [
    {name = "Julian Hamre",email = "julian.hamre5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.16.0,<0.17.0)"
]

[tool.poetry.scripts]
listloc = "listloc.main:app"

[tool.poetry]
packages = [{include = "listloc", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
